Enhance README with benchmarks and quickstart details
Expanded README with detailed benchmarks, quickstart guide, architecture overview, and module descriptions.